fixes shopping button footer gap when in another view

--- a/src/UI/OptionButtonBar/OptionButtonBar.module.css
+++ b/src/UI/OptionButtonBar/OptionButtonBar.module.css
@@ -15,6 +15,10 @@
     cursor: pointer;
 }
 
+.Option:focus-visible {
+    outline: none;
+}
+
 .Selected {
     border-radius: 1.5rem;
     background: #ebebeb;
